--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -7,7 +7,8 @@
     @persona.errors.full_messages.each do |message|
  messages<<"<li>"<<message<<"</li>"
 
- end %>
+ end
+ %>
   <div class="alert alert-danger alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert">
       <span aria-hidden="true">&times;</span>
@@ -140,15 +141,6 @@
       </div>
     </div>
     <div class="col-xs-6 form-group">
-      <%= f.label :cargas_familiares %>
-      <div class="form-group input-group">
-        <span class="input-group-addon">
-          <span class="fa fa-users"></span>
-        </span>
-        <%= f.number_field :cargas_familiares ,:class => "form-control" %>
-      </div>
-    </div>
-    <div class="col-xs-6 form-group">
       <%= f.label :direccion %>
       <div class="form-group input-group">
         <span class="input-group-addon">
@@ -204,7 +196,10 @@
     </div>
   </div>
 </div>
-<% end %>
+<% end%>
+<%=
+link_to_add_association 'agregar familiar', f, :familiares
+render 'familiar' %>
 <div class="col-xs-12 actions"><br>
   <%= f.submit "Guardar", class:  "btn btn-primary btn-md boton" %>
   <%= link_to raw('<i class="fa fa-arrow-circle-left"></i> Regresar'), personas_path ,class: "btn btn-default btn-md boton"%>
