--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -4,48 +4,46 @@
   </div>
   <h1>Empleados</h1>
 </div>
-<div class="panel panel-default">
-  <div class="panel-heading">
-    Lista de Empleados
-  </div>
-  <div class="panel-body">
-    <div class="table-responsive">
 
-      <table class="table table-hover table-bordered table-condensed table-striped">
-        <thead>
-          <tr>
-            <th class= "actions">Cedula</th>
-            <th class= "actions">Nombres</th>
-            <th class= "actions">Apellidos</th>
-            <th class= "actions">Fecha de nacimiento</th>
-            <th class= "actions">Correo</th>
-            <th class= "actions">Status</th>
-            <th class= "actions">Cargo</th>
-            <th class= "actions">Sueldo</th>
-            <th class= "actions">Acciones</th>
-          </tr>
-        </thead>
+<div class="row">
+  <div class="col-md-12 col-sm-12">
+    <ul class="nav nav-tabs">
+      <li class="active">
+        <a href="#activos" data-toggle="tab" class="activos_">Activos</a>
+      </li>
+      <li class="">
+        <a href="#retirados" data-toggle="tab" class="retirados_">Retirados</a>
+      </li>
+    </ul>
 
-        <tbody>
-          <% @personas.each do |persona| %>
-          <tr>
-            <td><%= $dic["tipos_de_cedula"].key(persona.tipo_de_cedula) + persona.cedula%></td>
-            <td><%= persona.nombres %></td>
-            <td><%= persona.apellidos %></td>
-            <td><%= persona.fecha_de_nacimiento %></td>
-            <td><%= persona.correo %></td>
-            <td><%= $dic["status"].key(persona.status) %></td>
-            <td><%= persona.cargo.nombre %></td>
-            <td><%= persona.cargo.sueldos.last.monto %></td>
-            <td class= "actions"><%= link_to '', persona,class: "fa fa-eye" %>
-            <%= link_to '', edit_persona_path(persona),class: "fa fa-pencil" %>
-            <%= link_to '', persona,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+    <div class="tab-content">
+      <div class="tab-pane fade active in" id="activos">
+        <div class = "sort_paginate_ajax"><%= render 'personas', :p => @personas %></div>
+      </div>
+      <div class="tab-pane fade" id="retirados">
+      <div class = "sort_paginate_ajax_retirados"><%= render 'personas', :p => @personas_retiradas %></div>
 
-<%= paginate @personas %>
+      </div>
     </div>
   </div>
 </div>
+<script>
+
+$(function() {
+  $(".retirados_").on("click", function(){
+    alert('dgfdfgdf');
+    $.getScript("/personas?page=1");
+    return false;
+  });
+
+  $(".sort_paginate_ajax th a, .sort_paginate_ajax .pagination a").on("click", function(){
+    $.getScript(this.href);
+    return false;
+  });
+  $(".sort_paginate_ajax_retirados th a, .sort_paginate_ajax_retirados .pagination a").on("click", function(){
+    $.getScript(this.href);
+    return false;
+  });
+});
+
+</script>
