--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -9,10 +9,10 @@
   <div class="col-md-12 col-sm-12">
     <ul class="nav nav-tabs">
       <li class="active">
-        <a href="#activos" data-toggle="tab" class="activos_">Activos</a>
+        <a href="#activos" data-toggle="tab">Activos</a>
       </li>
       <li class="">
-        <a href="#retirados" data-toggle="tab" class="retirados_">Retirados</a>
+        <a href="#retirados" data-toggle="tab">Retirados</a>
       </li>
     </ul>
 
@@ -28,22 +28,16 @@
   </div>
 </div>
 <script>
+var classes=".sort_paginate_ajax th a, .sort_paginate_ajax .pagination a, .sort_paginate_ajax_retirados th a, .sort_paginate_ajax_retirados .pagination a";
 
 $(function() {
-  $(".retirados_").on("click", function(){
-    alert('dgfdfgdf');
+  $('a[data-toggle="tab"').on('shown.bs.tab', function(){
+
     $.getScript("/personas?page=1");
     return false;
   });
 
-  $(".sort_paginate_ajax th a, .sort_paginate_ajax .pagination a").on("click", function(){
-    $.getScript(this.href);
-    return false;
-  });
-  $(".sort_paginate_ajax_retirados th a, .sort_paginate_ajax_retirados .pagination a").on("click", function(){
-    $.getScript(this.href);
-    return false;
-  });
+  $(classes).click(function(){$.getScript(this.href); return false;} );
 });
 
 </script>
